--- a/app/views/users/_campaign_ongoing.html.erb
+++ b/app/views/users/_campaign_ongoing.html.erb
@@ -1,6 +1,8 @@
 <div class="key"></div>
-<p class="byline brandon">Be the first to know</p>
+<p class="byline brandon">Tävla här - skriv in din e-postadress</p>
 <%= form_for @user, :url => { :action => "create" } do |f| %>
-  <%= f.text_field :email, :placeholder => "Enter Email", :class => "email brandon" %>
-  <input class="submit brandon" name="commit" type="submit" value="Step Inside" />
+  <%= f.text_field :email, :placeholder => "e.x tomten@nordpolen.jul", :class => "email brandon" %>
+  <input class="submit brandon" name="commit" type="submit" value="Tävla nu" />
 <% end %>
+
+<p class="brandon smallprint"><i>Din e-postadress är säker hos oss och delas inte med någon annan.</i></p>
