--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,88 @@
+<div class="header-logo">
+	<svg
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   viewBox="0 0 453.54666 24.373333"
+   height="24.373333"
+   width="453.54666"
+   xml:space="preserve"
+   id="svg2"
+   version="1.1"><metadata
+     id="metadata8"><rdf:RDF><cc:Work
+         rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work></rdf:RDF></metadata><defs
+     id="defs6" /><g
+     transform="matrix(1.3333333,0,0,-1.3333333,0,24.373333)"
+     id="g10"><g
+       transform="scale(0.1)"
+       id="g12"><path
+         id="path14"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="M 0,177.277 H 64.7578 L 146.809,91.9336 v 85.3434 h 64.769 V 5.48438 H 146.809 L 64.7578,90.8359 V 5.48438 L 0,5.48438 V 177.277" /><path
+         id="path16"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 237.133,91.3828 c 0,55.4372 45.828,91.3872 108.398,91.3872 62.559,0 108.399,-35.95 108.399,-91.3872 C 453.93,35.9375 408.09,0 345.531,0 282.961,0 237.133,35.9375 237.133,91.3828 m 145.437,0 c 0,23.0472 -15.91,38.6952 -37.039,38.6952 -21.133,0 -37.051,-15.648 -37.051,-38.6952 0,-23.0508 15.918,-38.6914 37.051,-38.6914 21.129,0 37.039,15.6406 37.039,38.6914" /><path
+         id="path18"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="M 576.07,59.8242 H 542.59 V 5.48438 H 477.551 V 177.27 h 138.308 c 32.114,0 62.289,-23.598 62.289,-58.719 0,-24.9768 -13.707,-45.2776 -34.847,-54.0588 l 36.5,-59.00782 h -70.25 z m -33.48,45.5588 h 53.238 c 8.781,0 13.992,4.109 13.992,11.801 0,7.398 -5.211,11.796 -13.992,11.796 H 542.59 v -23.597" /><path
+         id="path20"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 900.191,91.3828 c 0,-50.7734 -37.05,-85.89452 -86.718,-85.89452 H 701.781 V 177.27 h 111.692 c 49.668,0 86.718,-35.122 86.718,-85.8872 m -71.347,0 c 0,20.3082 -8.781,38.1402 -31.012,38.1402 H 766.543 V 53.2383 h 31.289 c 22.231,0 31.012,17.832 31.012,38.1445" /><path
+         id="path22"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 923.813,5.48047 h 64.7695 v 171.789 H 923.813 Z" /><path
+         id="path24"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 1010,60.6445 h 71.62 c 0.55,-7.6797 7.96,-14.2617 28.27,-14.2617 h 9.05 c 18.66,0 21.69,4.3789 21.69,10.418 0,6.043 -5.49,8.2344 -13.45,9.0547 l -47.75,5.4883 c -48.58,5.4882 -67.24,22.789 -67.24,52.9692 0,36.5 35.4,57.632 92.49,57.632 65.31,0 99.61,-23.875 102.08,-58.465 h -71.62 c -1.65,7.969 -9.06,12.633 -27.72,12.633 h -7.96 c -12.35,0 -17.01,-3.843 -17.01,-9.609 0,-5.762 5.21,-7.953 14,-9.051 l 49.66,-5.758 c 42.54,-4.953 65.31,-18.3942 65.31,-51.0505 0,-37.8711 -32.38,-60.093719 -99.34,-60.093719 -65.59,0 -99.89,21.402319 -102.08,60.093719" /><path
+         id="path26"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="M 1370.34,107.574 1432.09,5.49219 h -73.28 L 1321.49,63.9414 1298.44,41.7109 V 5.49219 h -64.77 V 177.27 h 64.77 v -62.02 l 64.21,62.02 h 80.96 l -73.27,-69.696" /><path
+         id="path28"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 1588.81,25.7969 h -70.8 L 1510.6,5.48438 h -66.42 l 68.33,171.79262 h 81.78 L 1662.62,5.48438 h -66.4 z m -16.74,45.8242 -18.66,50.4919 -18.66,-50.4919 h 37.32" /><path
+         id="path30"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="M 1954.91,103.73 V 39.2383 C 1942.57,21.3984 1908.53,0 1849.81,0 c -67.51,0 -111.14,35.9375 -111.14,91.3789 0,55.4371 44.73,91.3911 109.5,91.3911 62.02,0 101.26,-27.172 105.92,-64.219 h -72.72 c -4.39,6.308 -13.45,12.898 -31.83,12.898 -24.7,0 -39.52,-16.742 -39.52,-40.0701 0,-23.8672 16.2,-42.2617 46.65,-42.2617 21.14,0 32.66,6.5898 38.7,16.4687 H 1854.2 V 103.73 h 100.71" /><path
+         id="path32"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2103.68,25.7969 h -70.81 l -7.4,-20.31252 h -66.41 l 68.33,171.79262 h 81.78 L 2177.5,5.48438 h -66.42 z m -16.74,45.8242 -18.66,50.4919 -18.66,-50.4919 h 37.32" /><path
+         id="path34"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2191.52,177.277 h 64.76 V 53.7852 h 78.49 V 5.48438 H 2191.52 V 177.277" /><path
+         id="path36"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2356.47,177.277 h 64.76 V 53.7852 h 78.49 V 5.48438 H 2356.47 V 177.277" /><path
+         id="path38"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2521.42,177.277 h 172.61 v -48.293 h -107.85 v -16.468 h 80.13 V 70.7891 h -80.13 V 53.7852 h 109.77 V 5.48438 H 2521.42 V 177.277" /><path
+         id="path40"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2815.35,59.8242 h -33.48 V 5.48438 h -65.04 V 177.27 h 138.3 c 32.12,0 62.31,-23.598 62.31,-58.719 0,-24.9768 -13.73,-45.2776 -34.86,-54.0588 l 36.49,-59.00782 h -70.25 z m -33.48,45.5588 h 53.23 c 8.78,0 14,4.109 14,11.801 0,7.398 -5.22,11.796 -14,11.796 h -53.23 v -23.597" /><path
+         id="path42"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 2941.06,5.48047 h 64.7617 v 171.789 H 2941.06 Z" /><path
+         id="path44"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 3029.71,177.277 h 169.32 v -48.293 h -104.56 v -16.468 h 81.23 V 70.7891 h -81.23 V 53.7852 h 111.97 V 5.48438 H 3029.71 V 177.277" /><path
+         id="path46"
+         style="fill-opacity:1;fill-rule:nonzero;stroke:none"
+         d="m 3276.98,128.984 h -59.82 v 48.286 h 184.41 v -48.286 h -59.83 V 5.48438 h -64.76 V 128.984" /></g></g></svg>
+</div>
 <div class="hero">
-  <p class="large brandon">Harry&#8217;s is live</p>
-  <p class="small brandon">Respecting the Face and Wallet<br>Since Like...Right Now.</p>
+	<div class="hero-text">
+	  <p class="large brandon">Vinn en julklapp<br>värd 36 500 kr</p>
+	  <p class="small brandon">Tävla om den klassiska Utrecht Armchair 
+		från Cassina i valfri färg</p>
+		<span class="divider"></span>
+		<p class="small brandon">Tävlingen där alla kan vinna</p>
+		<p class="brandon">Förutom chansen att vinna den klassiska fåtöljen har du som tävlar möjlighet att få andra fina julklappar. <i>Var med och tävla via formuläret nedan så berättar vi mer i nästa steg.</i></p>
+    <p class="small brandon">Vinnaren presenteras på julafton. God jul!</p>
+	</div>
+  <div class="by_cassina">
+  </div>
 </div>
 
 <div class="form-wrap clearfix <%= "ended" if Rails.application.config.ended %>">
