--- a/app/views/users/_campaign_ended.html.erb
+++ b/app/views/users/_campaign_ended.html.erb
@@ -1,4 +1,4 @@
-<p class="thanks brandon">THANK YOU FOR PARTICIPATING<br>IN OUR PRE-LAUNCH.</p>
-<p class="compiling brandon">WE ARE COMPILING REWARDS RIGHT NOW AND WILL EMAIL<br/>COUPON CODES TO ALL RECIPIENTS IN THE NEXT DAY OR TWO</p>
-<p class="go-to brandon">In the meantime, head to  <a href="http://www.harrys.com/">WWW.HARRYS.COM</a></p>
-<p class="again brandon">Thank You Again!</p>
+<p class="thanks brandon">Tack för att du deltagit <br>i vår jultävling</p>
+<p class="compiling brandon">We samlar alla deltagare<br/>och kommer skicka ut alla julklappar inom kort</p>
+<p class="go-to brandon">Under tiden är du varmt välkommen till oss på Nybrogatan 11 i Stockholm  <a href="http://www.harrys.com/">eller på nordiskagalleriet.com</a></p>
+<p class="again brandon">Tack igen!</p>
