--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -497,15 +497,15 @@ html.home{
 
 #refer .prizes .progress .mover .bar{
 	background:black;
-	width: 20%;
+	width: 25%;
 	height: 4px;
 	-webkit-background-size: 1px 4px;
 	background-size: 1px 4px;
 }
 
-#refer .prize-two .progress .mover .bar{ width: 40%; }
-#refer .prize-three .progress .mover .bar{ width: 60%; }
-#refer .prize-four .progress .mover .bar{ width: 80%; }
+#refer .prize-two .progress .mover .bar{ width: 50%; }
+#refer .prize-three .progress .mover .bar{ width: 75%; }
+#refer .prize-four .progress .mover .bar{ width: 100%; }
 #refer .prize-five .progress .mover .bar{ width: 100%; }
 
 
@@ -525,7 +525,7 @@ html.home{
 	font-size: 14px;
 	float: left;
 	margin-right: 0;
-	width: 20%;
+	width: 25%;
 	font-weight: bold;
 }
 
@@ -542,7 +542,7 @@ html.home{
 #refer .prizes .products li.product{
 	height: 100%;
 	color: #151515;
-	width: 20%;
+	width: 25%;
 	float: left;
 	position: relative;
 	text-align: center;
@@ -588,6 +588,11 @@ html.home{
 	font-weight: 500;
 }
 
+#refer .prizes .products li.product p span{
+
+	font-weight:300;
+}
+
 #refer .prizes .products li.product:last-child{
 	margin-right: 0;
 }
@@ -619,7 +624,7 @@ html.home{
 	border: 4px solid #151515;
 	position: absolute;
 	top: -285px;
-	left: -32px;
+	left: 38px;
 	display: none;
 	background: #FFF;
 }
@@ -769,12 +774,15 @@ only screen and (min-device-pixel-ratio: 2) {
     border-radius: 100%;
 	}
 	#refer .prizes .products li.product p{
-		text-align: center;
-    width: 114px;
+		text-align: right;
+    width: 144px;
     position: absolute;
-    bottom: 20px;
-    right: 0;
+    top: 110px;
+    right: 17px;
 
+	}
+	#refer .prizes .products li.product p span{
+		font-weight: 300;
 	}
 	#refer .prizes .products li.title{
 		width: 100%;
@@ -801,7 +809,7 @@ only screen and (min-device-pixel-ratio: 2) {
 		padding: 1em 0;
 		border-bottom: 1px solid #e4e4e4;
 		float: none;
-		height: 140px;
+		height: 160px;
 	}
 
 	
@@ -830,7 +838,7 @@ only screen and (min-device-pixel-ratio: 2) {
 
 	#refer .prizes .progress{
 		width: 10px;
-		height: 786px;
+		height: 646px;
 		left: -40px;
 
 	}
@@ -844,10 +852,9 @@ only screen and (min-device-pixel-ratio: 2) {
 		height:10px;
 	}
 
-	#refer .prize-two .progress .mover .bar{ width: 10px; height: 173px; }
-	#refer .prize-three .progress .mover .bar{ width: 10px; height: 346px; }
-	#refer .prize-four .progress .mover .bar{ width: 10px; height: 519px; }
-	#refer .prize-five .progress .mover .bar{ width: 10px; height: 100%; }
+	#refer .prize-two .progress .mover .bar{ width: 10px; height: 215px; }
+	#refer .prize-three .progress .mover .bar{ width: 10px; height: 430px; }
+	#refer .prize-four .progress .mover .bar{ width: 10px; height: 100%; }
 
 
 }
